# eduverse

./: README.md
contracts/: Cargo.toml  lib.rs
contracts/course/: Cargo.toml  lib.rs
contracts/nft/: Cargo.toml
frontend/: bun.lockb  contract.json  package.json
frontend/contracts/: constructor-query.d.ts  events.d.ts  index.d.ts  query.d.ts  tx.d.ts  types.d.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CreateCourse.tsx  Dashboard.tsx  WalletConnect.tsx  WebSocketClient.tsx
frontend/src/components/ui/: Phaser.tsx
server/: Cargo.toml  metadata.scale
server/src/: event_listener.rs  main.rs  room_manager.rs  sfu.rs  stream_types.rs  user.rs  ws_payload.rs
