[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.0",features = ["full"]}
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
subxt = "0.38.0"
serde_json = "1.0.132"
rand = "0.8.5"
lazy_static = "1.5.0"
sp-core = { version = "34.0.0", default-features = false, features = ["std"] }
sp-io = { version = "38.0.0", default-features = false, features = ["std"] }
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.31"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
mediasoup = "0.17.1"
num_cpus = "1.16.0"
event-listener = "5.3.1"
blake2 = "0.10.6"
parking_lot = "0.12.3"
